# hypre

./: mangle_hypre.sh
src/: CMakeLists.txt  HYPREf.h  Makefile  NALU_HYPRE.h  NALU_HYPREf.h  NALU_NALU_HYPRE.h  configure
src/FEI_mv/: CMakeLists.txt  Makefile
src/FEI_mv/fei-hypre/: CHANGELOG  CMakeLists.txt  FEI_HYPRE_Impl.cxx  FEI_HYPRE_Impl.h  FEI_NALU_HYPRE_Impl.cxx  FEI_NALU_HYPRE_Impl.h  FEI_NALU_HYPRE_include.h  HYPRE_Builder.h  HYPRE_FEI.doc  HYPRE_FEI_includes.h  HYPRE_LSC_aux.cxx  HYPRE_LSI_Dsuperlu.c  HYPRE_LSI_Dsuperlu.h  HYPRE_LSI_UZAWA.cxx  HYPRE_LSI_Uzawa_c.h  HYPRE_LSI_blkprec.cxx  HYPRE_LSI_block.h  HYPRE_LSI_ddict.c  HYPRE_LSI_ddict.h  HYPRE_LSI_ddilut.c  HYPRE_LSI_ddilut.h  HYPRE_LSI_ml.c  HYPRE_LSI_mli.cxx  HYPRE_LSI_mli.h  HYPRE_LSI_mlmaxwell.c  HYPRE_LSI_poly.c  HYPRE_LSI_poly.h  HYPRE_LSI_schur.cxx  HYPRE_LSI_schur.h  HYPRE_LSI_schwarz.c  HYPRE_LinSysCore.cxx  HYPRE_LinSysCore.h  HYPRE_MLMaxwell.h  HYPRE_SlideReduction.cxx  HYPRE_fei_matrix.cxx  HYPRE_fei_mesh.cxx  HYPRE_fei_mv.h  HYPRE_parcsr_TFQmr.c  HYPRE_parcsr_bicgs.c  HYPRE_parcsr_bicgstabl.h  (+92 more)
src/FEI_mv/femli/: CMakeLists.txt  Makefile  Usage_amgs  Usage_solver  cmli.cxx  cmli.h  driver_fedata.cxx  driver_matrix.cxx  driver_util.c  genTecPlot.c  mli.cxx  mli.h  mli_amgsa_calib.cxx  mli_amgsa_coarsen1.cxx  mli_amgsa_dd_fedata.cxx  mli_amgsa_dd_sfei.cxx  mli_amgsa_elem.cxx  mli_defs.h  mli_febase.cxx  mli_febase.h  mli_fedata.cxx  mli_fedata.h  mli_fedata_utils.cxx  mli_fedata_utils.h  mli_festruct.h  mli_mapper.cxx  mli_mapper.h  mli_matrix.cxx  mli_matrix.h  mli_matrix_misc.h  mli_matrix_mult.cxx  mli_matrix_utils.cxx  mli_method.cxx  mli_method.h  mli_method_amgcr.cxx  mli_method_amgcr.h  mli_method_amgrs.cxx  mli_method_amgrs.h  mli_method_amgsa.cxx  mli_method_amgsa.h  (+48 more)
src/IJ_mv/: CMakeLists.txt  F90_HYPRE_IJMatrix.c  F90_HYPRE_IJVector.c  F90_IJMatrix.c  F90_NALU_HYPRE_IJMatrix.c  F90_NALU_HYPRE_IJVector.c  HYPRE_IJMatrix.c  HYPRE_IJVector.c  HYPRE_IJ_mv.h  IJMatrix.c  IJMatrix_isis.c  IJMatrix_parcsr.c  IJMatrix_parcsr_device.c  IJMatrix_petsc.c  IJVector.c  IJVector_parcsr.c  IJVector_parcsr_device.c  IJ_assumed_part.c  IJ_matrix.h  IJ_vector.h  Makefile  NALU_HYPRE_IJMatrix.c  NALU_HYPRE_IJVector.c  NALU_HYPRE_IJ_mv.h  _hypre_IJ_mv.h  aux_par_vector.c  aux_par_vector.h  aux_parcsr_matrix.c  aux_parcsr_matrix.h  headers  protos.h
src/blas/: CMakeLists.txt  Makefile  README  _hypre_blas.h  dasum.c  daxpy.c  dcopy.c  ddot.c  dgemm.c  dgemv.c  dger.c  dnrm2.c  drot.c  dscal.c  dswap.c  dsymm.c  dsymv.c  dsyr2.c  dsyr2k.c  dsyrk.c  dtrmm.c  dtrmv.c  dtrsm.c  dtrsv.c  f2c.c  f2c.h  hypre_blas.h  idamax.c  (+3 more)
(+1458 files in other folders)
